fix the center align issue

--- a/src/components/DiscussBoard/Post.module.css
+++ b/src/components/DiscussBoard/Post.module.css
@@ -1,9 +1,4 @@
 .container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-}
-
-.card {
-  margin-top: 60px;
 }
