--- a/src/pages/DiscussionBoard.module.css
+++ b/src/pages/DiscussionBoard.module.css
@@ -16,7 +16,7 @@
 
 .posts {
   margin-top: 30px;
-  margin-left: 400px;
+  margin-left: 0px;
 }
 
 .button {
